--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ua.bios">
-
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,8 +18,13 @@
 
         <activity android:name=".mvvm.view.AboutActivity"
             android:parentActivityName=".mvvm.view.MainActivity"
+            android:label="@string/app_about"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".mvvm.view.SettingsActivity"
+            android:parentActivityName=".mvvm.view.MainActivity"
+            android:label="@string/app_settings"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
